was changed to is

--- a/templates/details.html
+++ b/templates/details.html
@@ -7,7 +7,7 @@
 <body>
     <p>Inside details page</p>
     {% if data %}
-        <p>Username given was : {{ data['username'] }} </p>
+        <p>Username given is : {{ data['username'] }} </p>
     {% endif %}
 </body>
 </html>
